[gd_scene load_steps=3 format=3 uid="uid://bveqrsveh751o"]

[ext_resource type="Script" uid="uid://uwqxg0m474ks" path="res://GUI/shop_menu/Scripts/sell_item_button.gd" id="1_hsceg"]
[ext_resource type="Texture2D" uid="uid://ctm2d1pa5ib88" path="res://Weapons/Assets/basic_sword.png" id="2_d47mu"]

[node name="SellItemButton" type="Button"]
custom_minimum_size = Vector2(440, 72)
offset_right = 440.0
offset_bottom = 72.0
text = "
"
script = ExtResource("1_hsceg")

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 78.0
offset_top = 14.0
offset_right = 320.0
offset_bottom = 54.0
theme_override_font_sizes/font_size = 40
text = "Item Name"
text_overrun_behavior = 3

[node name="TextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("2_d47mu")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 309.0
offset_right = 440.0
offset_bottom = 84.0
metadata/_edit_group_ = true

[node name="PriceLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Sell: 999"

[node name="QuantityLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Qt: 999"
